--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" alt="ryoji-iwata"
+						<img src="./assets/images/slider/ryoji-iwata-zebra-unsplash-L.webp" alt="ryoji-iwata"
 							class="d-block w-100" alt="...">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" alt="nicholas-green"
+						<img src="./assets/images/slider/nicholas-green-supporter-unsplash-L.webp" alt="nicholas-green"
 							class="d-block w-100" alt="...">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" alt="edward-cisneros"
+						<img src="./assets/images/slider/edward-cisneros-dance-unsplash-L.webp" alt="edward-cisneros"
 							class="d-block w-100" alt="...">
 					</div>
 				</div>
@@ -75,7 +75,7 @@
 		</section>
 		<section id="about"> <!--Doit être une section-->
 			<div class="picture left"> <!--Pourquoi une div ?-->
-				<img src="./assets/images/nina.png" alt="Nina's self-portrait">
+				<img src="./assets/images/nina-mini.webp" alt="Nina's self-portrait">
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
@@ -96,31 +96,31 @@
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
+						src="./assets/images/gallery/concerts/Aaron-paul-concert-unsplash-mini.webp"
 						alt="Photo taken during a concert" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
+						src="./assets/images/gallery/entreprise/ali-morshedlou-leader-unsplash-mini.webp"
 						alt="Portrait of a business leader" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
+						src="./assets/images/gallery/entreprise/jason-goodman-smile-unsplash-mini.webp"
 						alt="Portrait of an office worker" />
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
+						src="./assets/images/gallery/mariage/hannah-busing-hands-unsplash-mini.webp"
 						alt="Photo of hands meeting" />
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
+						src="./assets/images/gallery/portraits/ade-tunji-upset-unsplash-mini.webp"
 						alt="portrait of an upset man" />
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
+						src="./assets/images/gallery/mariage/jakob-owens-bride-unsplash-mini.webp"
 						alt="photo of the bride and groom in the park" />
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
+						src="./assets/images/gallery/portraits/nino-van-prattenburg-young-unsplash-mini.webp"
 						alt="Low angle portrait of a young woman" />
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
+						src="./assets/images/gallery/concerts/austin-neill-singer-unsplash-mini.webp"
 						alt="Photo of a singer during a concert" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
+						src="./assets/images/gallery/entreprise/mateus-campos-felipe-laught-unsplash-mini.webp"
 						alt="we have the right to laugh at work!" />
 				</div>
 			</div>
@@ -196,7 +196,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera.png" alt="vintage camera">
+					<img src="./assets/images/camera-mini.webp" alt="vintage camera">
 				</div>
 			</div>
 		</section>
