--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
 	<meta name="description"
 		content="Portfolio de la photographe Nina Carducci : portraits, mariage, reportage d'entreprise, évènementiel, retouche, albums... J'immortalise vos instants de vie pour en créer de précieux souvenirs.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link 
-		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-		rel="stylesheet"><!-- rel="preload" -->
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" >
-	<link rel="stylesheet" href="./assets/style.css" >
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" disabled>
+	<link rel="stylesheet" href="./assets/style.css" disabled>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+	<link
+		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+		rel="stylesheet">
 	<meta charset="UTF-8">
 </head>
 
