--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
 	<meta charset="UTF-8">
-	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
-	<script src="./assets/scripts.js"></script>
 </head>
 
 <body>
@@ -49,16 +44,30 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-zebra-unsplash-L.webp" alt="ryoji-iwata"
-							class="d-block w-100" alt="...">
+						<picture>
+							<source srcset="./assets/images/slider/ryoji-iwata-zebra-unsplash-SM.webp"
+								media="(max-width:767px)" />
+							<img src="./assets/images/slider/ryoji-iwata-zebra-unsplash-L.webp" alt="ryoji-iwata"
+								class="d-block w-100" />
+						</picture>
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green-supporter-unsplash-L.webp" alt="nicholas-green"
-							class="d-block w-100" alt="...">
+						<picture>
+							<source srcset="./assets/images/slider/nicholas-green-supporter-unsplash-SM.webp"
+								media="(max-width:767px)" />
+							<img src="./assets/images/slider/nicholas-green-supporter-unsplash-L.webp"
+								alt="nicholas-green" class="d-block w-100">
+						</picture>
+
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros-dance-unsplash-L.webp" alt="edward-cisneros"
-							class="d-block w-100" alt="...">
+						<picture>
+							<source srcset="./assets/images/slider/edward-cisneros-dance-unsplash-SM.webp"
+								media="(max-width:767px)" />
+							<img src="./assets/images/slider/edward-cisneros-dance-unsplash-L.webp"
+								alt="edward-cisneros" class="d-block w-100">
+						</picture>
+
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -201,6 +210,11 @@
 			</div>
 		</section>
 	</main>
+	<script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+	<script defer src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script defer src="./assets/maugallery.js"></script>
+	<script defer src="./assets/scripts.js"></script>
 </body>
 
 </html>
