mise en place du préchargement du css et des polices

--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 	<meta name="description"
 		content="Portfolio de la photographe Nina Carducci : portraits, mariage, reportage d'entreprise, évènementiel, retouche, albums... J'immortalise vos instants de vie pour en créer de précieux souvenirs.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript>
+		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+	</noscript>
 	<link rel="stylesheet" href="./assets/style.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-		rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preload" as="style"
+	href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,800&display=swap">
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,800&display=swap"
+	media="print" onload="this.media='all'">
 	<meta charset="UTF-8">
 </head>
 
