--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
 	<meta name="description"
 		content="Portfolio de la photographe Nina Carducci : portraits, mariage, reportage d'entreprise, évènementiel, retouche, albums... J'immortalise vos instants de vie pour en créer de précieux souvenirs.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style"
+		onload="this.onload=null;this.rel='stylesheet'">
 	<noscript>
 		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	</noscript>
 	<link rel="stylesheet" href="./assets/style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preload" as="style"
-	href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,800&display=swap">
-<link rel="stylesheet"
-	href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,800&display=swap"
-	media="print" onload="this.media='all'">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="preload" as="style"
+		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,800&display=swap">
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,800&display=swap"
+		media="print" onload="this.media='all'">
 	<meta charset="UTF-8">
 </head>
 
@@ -53,7 +54,7 @@
 							<source srcset="./assets/images/slider/ryoji-iwata-zebra-unsplash-SM.webp"
 								media="(max-width:767px)" />
 							<img src="./assets/images/slider/ryoji-iwata-zebra-unsplash-L.webp" alt="ryoji-iwata"
-								class="d-block w-100" />
+								class="d-block" width="100%" height="100%"/>
 						</picture>
 					</div>
 					<div class="carousel-item">
@@ -61,7 +62,7 @@
 							<source srcset="./assets/images/slider/nicholas-green-supporter-unsplash-SM.webp"
 								media="(max-width:767px)" />
 							<img src="./assets/images/slider/nicholas-green-supporter-unsplash-L.webp"
-								alt="nicholas-green" class="d-block w-100">
+								alt="nicholas-green" class="d-block" width="100%" height="100%">
 						</picture>
 
 					</div>
@@ -70,7 +71,7 @@
 							<source srcset="./assets/images/slider/edward-cisneros-dance-unsplash-SM.webp"
 								media="(max-width:767px)" />
 							<img src="./assets/images/slider/edward-cisneros-dance-unsplash-L.webp"
-								alt="edward-cisneros" class="d-block w-100">
+								alt="edward-cisneros" class="d-block" width="100%" height="100%">
 						</picture>
 
 					</div>
@@ -89,7 +90,7 @@
 		</section>
 		<section id="about"> <!--Doit être une section-->
 			<div class="picture left"> <!--Pourquoi une div ?-->
-				<img src="./assets/images/nina-mini.webp" alt="Nina's self-portrait">
+				<img src="./assets/images/nina-mini.webp" alt="Nina's self-portrait" loading="lazy">
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
@@ -109,33 +110,33 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item"
+					<img data-gallery-tag="Concert" class="gallery-item" width="100%" height="100%"
 						src="./assets/images/gallery/concerts/Aaron-paul-concert-unsplash-mini.webp"
-						alt="Photo taken during a concert" />
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+						alt="Photo taken during a concert" loading="lazy" />
+					<img data-gallery-tag="Entreprises" class="gallery-item" width="100%" height="100%"
 						src="./assets/images/gallery/entreprise/ali-morshedlou-leader-unsplash-mini.webp"
-						alt="Portrait of a business leader" />
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+						alt="Portrait of a business leader" loading="lazy" />
+					<img data-gallery-tag="Entreprises" class="gallery-item" width="100%" height="100%"
 						src="./assets/images/gallery/entreprise/jason-goodman-smile-unsplash-mini.webp"
-						alt="Portrait of an office worker" />
-					<img data-gallery-tag="Mariages" class="gallery-item"
+						alt="Portrait of an office worker" loading="lazy" />
+					<img data-gallery-tag="Mariages" class="gallery-item" width="100%" height="100%"
 						src="./assets/images/gallery/mariage/hannah-busing-hands-unsplash-mini.webp"
-						alt="Photo of hands meeting" />
-					<img data-gallery-tag="Portrait" class="gallery-item"
+						alt="Photo of hands meeting" loading="lazy" />
+					<img data-gallery-tag="Portrait" class="gallery-item" width="100%" height="100%"
 						src="./assets/images/gallery/portraits/ade-tunji-upset-unsplash-mini.webp"
-						alt="portrait of an upset man" />
-					<img data-gallery-tag="Mariages" class="gallery-item"
+						alt="portrait of an upset man" loading="lazy" />
+					<img data-gallery-tag="Mariages" class="gallery-item" width="100%" height="100%"
 						src="./assets/images/gallery/mariage/jakob-owens-bride-unsplash-mini.webp"
-						alt="photo of the bride and groom in the park" />
-					<img data-gallery-tag="Portrait" class="gallery-item"
+						alt="photo of the bride and groom in the park" loading="lazy" />
+					<img data-gallery-tag="Portrait" class="gallery-item" width="100%" height="100%"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg-young-unsplash-mini.webp"
-						alt="Low angle portrait of a young woman" />
-					<img data-gallery-tag="Concert" class="gallery-item"
+						alt="Low angle portrait of a young woman" loading="lazy" />
+					<img data-gallery-tag="Concert" class="gallery-item" width="100%" height="100%"
 						src="./assets/images/gallery/concerts/austin-neill-singer-unsplash-mini.webp"
-						alt="Photo of a singer during a concert" />
-					<img data-gallery-tag="Entreprises" class="gallery-item"
+						alt="Photo of a singer during a concert" loading="lazy" />
+					<img data-gallery-tag="Entreprises" class="gallery-item" width="100%" height="100%"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-laught-unsplash-mini.webp"
-						alt="we have the right to laugh at work!" />
+						alt="we have the right to laugh at work!" loading="lazy" />
 				</div>
 			</div>
 			<figure class="quote">
@@ -210,7 +211,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera-mini.webp" alt="vintage camera">
+					<img src="./assets/images/camera-mini.webp" alt="vintage camera" loading="lazy">
 				</div>
 			</div>
 		</section>
