--- a/index.html
+++ b/index.html
@@ -52,26 +52,25 @@
 					<div class="carousel-item active">
 						<picture>
 							<source srcset="./assets/images/slider/ryoji-iwata-zebra-unsplash-SM.webp"
-								media="(max-width:767px)" />
+							width="800px" height="370px" media="(max-width:767px)" />
 							<img src="./assets/images/slider/ryoji-iwata-zebra-unsplash-L.webp" alt="ryoji-iwata"
-								class="d-block" width="100%" height="100%"/>
+								class="d-block" width="2000px" height="925px" />
 						</picture>
 					</div>
 					<div class="carousel-item">
 						<picture>
 							<source srcset="./assets/images/slider/nicholas-green-supporter-unsplash-SM.webp"
-								media="(max-width:767px)" />
+								width="800px" height="370px" media="(max-width:767px)" />
 							<img src="./assets/images/slider/nicholas-green-supporter-unsplash-L.webp"
-								alt="nicholas-green" class="d-block" width="100%" height="100%">
+								alt="nicholas-green" class="d-block" width="2000px" height="925px">
 						</picture>
-
 					</div>
 					<div class="carousel-item">
 						<picture>
 							<source srcset="./assets/images/slider/edward-cisneros-dance-unsplash-SM.webp"
-								media="(max-width:767px)" />
+								width="800px" heigth="370px" media="(max-width:767px)" />
 							<img src="./assets/images/slider/edward-cisneros-dance-unsplash-L.webp"
-								alt="edward-cisneros" class="d-block" width="100%" height="100%">
+								alt="edward-cisneros" class="d-block" width="2000px" height="924px">
 						</picture>
 
 					</div>
@@ -90,7 +89,8 @@
 		</section>
 		<section id="about"> <!--Doit être une section-->
 			<div class="picture left"> <!--Pourquoi une div ?-->
-				<img src="./assets/images/nina-mini.webp" alt="Nina's self-portrait" loading="lazy">
+				<img src="./assets/images/nina-mini.webp" alt="Nina's self-portrait" width="702px" height="700px"
+					loading="lazy">
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
@@ -110,31 +110,31 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" width="100%" height="100%"
+					<img data-gallery-tag="Concert" class="gallery-item" width="700px" height="933px"
 						src="./assets/images/gallery/concerts/Aaron-paul-concert-unsplash-mini.webp"
 						alt="Photo taken during a concert" loading="lazy" />
-					<img data-gallery-tag="Entreprises" class="gallery-item" width="100%" height="100%"
+					<img data-gallery-tag="Entreprises" class="gallery-item" width="700px" height="1050px"
 						src="./assets/images/gallery/entreprise/ali-morshedlou-leader-unsplash-mini.webp"
 						alt="Portrait of a business leader" loading="lazy" />
-					<img data-gallery-tag="Entreprises" class="gallery-item" width="100%" height="100%"
+					<img data-gallery-tag="Entreprises" class="gallery-item" width="1034px" height="700px"
 						src="./assets/images/gallery/entreprise/jason-goodman-smile-unsplash-mini.webp"
 						alt="Portrait of an office worker" loading="lazy" />
-					<img data-gallery-tag="Mariages" class="gallery-item" width="100%" height="100%"
+					<img data-gallery-tag="Mariages" class="gallery-item" width="875px" height="700px"
 						src="./assets/images/gallery/mariage/hannah-busing-hands-unsplash-mini.webp"
 						alt="Photo of hands meeting" loading="lazy" />
-					<img data-gallery-tag="Portrait" class="gallery-item" width="100%" height="100%"
+					<img data-gallery-tag="Portrait" class="gallery-item" width="700px" height="1049px"
 						src="./assets/images/gallery/portraits/ade-tunji-upset-unsplash-mini.webp"
 						alt="portrait of an upset man" loading="lazy" />
-					<img data-gallery-tag="Mariages" class="gallery-item" width="100%" height="100%"
+					<img data-gallery-tag="Mariages" class="gallery-item" width="700px" height="1050px"
 						src="./assets/images/gallery/mariage/jakob-owens-bride-unsplash-mini.webp"
 						alt="photo of the bride and groom in the park" loading="lazy" />
-					<img data-gallery-tag="Portrait" class="gallery-item" width="100%" height="100%"
+					<img data-gallery-tag="Portrait" class="gallery-item" width="700px" height="1052px"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg-young-unsplash-mini.webp"
 						alt="Low angle portrait of a young woman" loading="lazy" />
-					<img data-gallery-tag="Concert" class="gallery-item" width="100%" height="100%"
+					<img data-gallery-tag="Concert" class="gallery-item" width="1050px" height="700px"
 						src="./assets/images/gallery/concerts/austin-neill-singer-unsplash-mini.webp"
 						alt="Photo of a singer during a concert" loading="lazy" />
-					<img data-gallery-tag="Entreprises" class="gallery-item" width="100%" height="100%"
+					<img data-gallery-tag="Entreprises" class="gallery-item" width="1143px" height="700px"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-laught-unsplash-mini.webp"
 						alt="we have the right to laugh at work!" loading="lazy" />
 				</div>
@@ -211,7 +211,8 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera-mini.webp" alt="vintage camera" loading="lazy">
+					<img src="./assets/images/camera-mini.webp" alt="vintage camera" width="701px" height="700px"
+						loading="lazy">
 				</div>
 			</div>
 		</section>
