--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<picture>
 							<source srcset="./assets/images/slider/ryoji-iwata-zebra-unsplash-SM.webp"
 							width="800px" height="370px" media="(max-width:767px)" />
-							<img src="./assets/images/slider/ryoji-iwata-zebra-unsplash-L(2).webp" alt="ryoji-iwata"
+							<img src="./assets/images/slider/ryoji-iwata-zebra-unsplash-L2.webp" alt="ryoji-iwata"
 								class="d-block" width="2000px" height="925px" />
 						</picture>
 					</div>
@@ -61,7 +61,7 @@
 						<picture>
 							<source srcset="./assets/images/slider/nicholas-green-supporter-unsplash-SM.webp"
 								width="800px" height="370px" media="(max-width:767px)" />
-							<img src="./assets/images/slider/nicholas-green-supporter-unsplash-L(2).webp"
+							<img src="./assets/images/slider/nicholas-green-supporter-unsplash-L2.webp"
 								alt="nicholas-green" class="d-block" width="2000px" height="925px">
 						</picture>
 					</div>
@@ -69,7 +69,7 @@
 						<picture>
 							<source srcset="./assets/images/slider/edward-cisneros-dance-unsplash-SM.webp"
 								width="800px" heigth="370px" media="(max-width:767px)" />
-							<img src="./assets/images/slider/edward-cisneros-dance-unsplash-L(2).webp"
+							<img src="./assets/images/slider/edward-cisneros-dance-unsplash-L2.webp"
 								alt="edward-cisneros" class="d-block" width="2000px" height="924px">
 						</picture>
 
@@ -89,7 +89,7 @@
 		</section>
 		<section id="about"> <!--Doit être une section-->
 			<div class="picture left"> <!--Pourquoi une div ?-->
-				<img src="./assets/images/nina-mini(2).webp" alt="Nina's self-portrait" width="702px" height="700px"
+				<img src="./assets/images/nina-mini2.webp" alt="Nina's self-portrait" width="702px" height="700px"
 					loading="lazy">
 			</div>
 			<div id="about-me">
@@ -111,31 +111,31 @@
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
 					<img data-gallery-tag="Concert" class="gallery-item" width="700px" height="933px"
-						src="./assets/images/gallery/concerts/Aaron-paul-concert-unsplash-mini(2).webp"
+						src="./assets/images/gallery/concerts/Aaron-paul-concert-unsplash-mini2.webp"
 						alt="Photo taken during a concert" loading="lazy" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" width="700px" height="1050px"
-						src="./assets/images/gallery/entreprise/ali-morshedlou-leader-unsplash-mini(2).webp"
+						src="./assets/images/gallery/entreprise/ali-morshedlou-leader-unsplash-mini2.webp"
 						alt="Portrait of a business leader" loading="lazy" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" width="1034px" height="700px"
-						src="./assets/images/gallery/entreprise/jason-goodman-smile-unsplash-mini(2).webp"
+						src="./assets/images/gallery/entreprise/jason-goodman-smile-unsplash-mini2.webp"
 						alt="Portrait of an office worker" loading="lazy" />
 					<img data-gallery-tag="Mariages" class="gallery-item" width="875px" height="700px"
-						src="./assets/images/gallery/mariage/hannah-busing-hands-unsplash-mini(2).webp"
+						src="./assets/images/gallery/mariage/hannah-busing-hands-unsplash-mini2.webp"
 						alt="Photo of hands meeting" loading="lazy" />
 					<img data-gallery-tag="Portrait" class="gallery-item" width="700px" height="1049px"
-						src="./assets/images/gallery/portraits/ade-tunji-upset-unsplash-mini(2).webp"
+						src="./assets/images/gallery/portraits/ade-tunji-upset-unsplash-mini2.webp"
 						alt="portrait of an upset man" loading="lazy" />
 					<img data-gallery-tag="Mariages" class="gallery-item" width="700px" height="1050px"
-						src="./assets/images/gallery/mariage/jakob-owens-bride-unsplash-mini(2).webp"
+						src="./assets/images/gallery/mariage/jakob-owens-bride-unsplash-mini2.webp"
 						alt="photo of the bride and groom in the park" loading="lazy" />
 					<img data-gallery-tag="Portrait" class="gallery-item" width="700px" height="1052px"
-						src="./assets/images/gallery/portraits/nino-van-prattenburg-young-unsplash-mini(2).webp"
+						src="./assets/images/gallery/portraits/nino-van-prattenburg-young-unsplash-mini2.webp"
 						alt="Low angle portrait of a young woman" loading="lazy" />
 					<img data-gallery-tag="Concert" class="gallery-item" width="1050px" height="700px"
-						src="./assets/images/gallery/concerts/austin-neill-singer-unsplash-mini(2).webp"
+						src="./assets/images/gallery/concerts/austin-neill-singer-unsplash-mini2.webp"
 						alt="Photo of a singer during a concert" loading="lazy" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" width="1143px" height="700px"
-						src="./assets/images/gallery/entreprise/mateus-campos-felipe-laught-unsplash-mini(2).webp"
+						src="./assets/images/gallery/entreprise/mateus-campos-felipe-laught-unsplash-mini2.webp"
 						alt="we have the right to laugh at work!" loading="lazy" />
 				</div>
 			</div>
@@ -211,7 +211,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera-mini(2).webp" alt="vintage camera" width="701px" height="700px"
+					<img src="./assets/images/camera-mini2.webp" alt="vintage camera" width="701px" height="700px"
 						loading="lazy">
 				</div>
 			</div>
