test cdn image nina

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<picture>
-							<source srcset="./assets/images/slider/ryoji-iwata-zebra-unsplash-SM.webp"
-							width="800px" height="370px" media="(max-width:767px)" />
+							<source srcset="./assets/images/slider/ryoji-iwata-zebra-unsplash-SM.webp" width="800px"
+								height="370px" media="(max-width:767px)" />
 							<img src="./assets/images/slider/ryoji-iwata-zebra-unsplash-L2.webp" alt="ryoji-iwata"
 								class="d-block" width="2000px" height="925px" />
 						</picture>
@@ -67,8 +67,8 @@
 					</div>
 					<div class="carousel-item">
 						<picture>
-							<source srcset="./assets/images/slider/edward-cisneros-dance-unsplash-SM.webp"
-								width="800px" heigth="370px" media="(max-width:767px)" />
+							<source srcset="./assets/images/slider/edward-cisneros-dance-unsplash-SM.webp" width="800px"
+								heigth="370px" media="(max-width:767px)" />
 							<img src="./assets/images/slider/edward-cisneros-dance-unsplash-L2.webp"
 								alt="edward-cisneros" class="d-block" width="2000px" height="924px">
 						</picture>
@@ -89,7 +89,7 @@
 		</section>
 		<section id="about"> <!--Doit être une section-->
 			<div class="picture left"> <!--Pourquoi une div ?-->
-				<img src="./assets/images/nina-mini2.webp" alt="Nina's self-portrait" width="702px" height="700px"
+				<img src="/.netlify/images?url=/assets/images/nina.png" alt="Nina's self-portrait" width="702px" height="700px"
 					loading="lazy">
 			</div>
 			<div id="about-me">
