--- a/index.html
+++ b/index.html
@@ -211,8 +211,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="/.netlify/images?url=/assets/images/camera-mini2.webp" alt="vintage camera" width="701px" height="700px"
-						loading="lazy">
+					<img src="/.netlify/images?url=/assets/images/450/camera-mini2.webp" alt="vintage camera">
 				</div>
 			</div>
 		</section>
