test image camera

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="/.netlify/images?url=/assets/images/450/camera-mini2.webp" alt="vintage camera">
+					<img src="/.netlify/images?url=/assets/images/camera-mini2.webp&w=450&q=80" alt="vintage camera">
 				</div>
 			</div>
 		</section>
