TRavail sur les images du slider

--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<picture>
-							<source srcset="./assets/images/slider/ryoji-iwata-zebra-unsplash-SM.webp" width="800px"
+							<source srcset="/.netlify/images?url=/assets/images/slider/ryoji-iwata-zebra-MS.webp" width="800px"
 								height="370px" media="(max-width:767px)" />
-							<img src="./assets/images/slider/ryoji-iwata-zebra-unsplash-L2.webp" alt="ryoji-iwata"
+							<img src="/.netlify/images?url=/assets/images/slider/ryoji-iwata-zebra.webp" alt="ryoji-iwata"
 								class="d-block" width="2000px" height="925px" />
 						</picture>
 					</div>
 					<div class="carousel-item">
 						<picture>
-							<source srcset="./assets/images/slider/nicholas-green-supporter-unsplash-SM.webp"
+							<source srcset="/.netlify/images?url=/assets/images/slider/nicholas-green-supporter-MS.webp"
 								width="800px" height="370px" media="(max-width:767px)" />
-							<img src="./assets/images/slider/nicholas-green-supporter-unsplash-L2.webp"
+							<img src="/.netlify/images?url=/assets/images/slider/nicholas-green-supporter.webp"
 								alt="nicholas-green" class="d-block" width="2000px" height="925px">
 						</picture>
 					</div>
 					<div class="carousel-item">
 						<picture>
-							<source srcset="./assets/images/slider/edward-cisneros-dance-unsplash-SM.webp" width="800px"
+							<source srcset="/.netlify/images?url=/assets/images/slider/edward-cisneros-dance-MS.webp" width="800px"
 								heigth="370px" media="(max-width:767px)" />
-							<img src="./assets/images/slider/edward-cisneros-dance-unsplash-L2.webp"
+							<img src="/.netlify/images?url=/assets/images/slider/edward-cisneros-dance.webp"
 								alt="edward-cisneros" class="d-block" width="2000px" height="924px">
 						</picture>
 
