minifier fichier bootstrap

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="/.netlify/images?url=/assets/images/camera.webp" alt="vintage camera">
+					<img src="/.netlify/images?url=/assets/images/camera.webp" alt="vintage camera" loading="lazy">
 				</div>
 			</div>
 		</section>
