--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 		</section>
 		<section id="about">
 			<div class="picture left">
-				<img src="/.netlify/images?url=/assets/images/nina.webp" alt="Nina's self-portrait" width="470px" height="468px"
-					loading="lazy">
+				<img src="/.netlify/images?url=/assets/images/nina.webp" alt="Nina's self-portrait" width="470px" height="468px">
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
