suppression des CDN

--- a/index.html
+++ b/index.html
@@ -50,26 +50,26 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<picture>
-							<source srcset="/.netlify/images?url=/assets/images/slider/ryoji-iwata-zebra-MS.webp" width="800px"
+							<source srcset="/assets/images/slider/ryoji-iwata-zebra-MS.webp" width="800px"
 								height="370px" media="(max-width:767px)" />
-							<img src="/.netlify/images?url=/assets/images/slider/ryoji-iwata-zebra.webp" alt="ryoji-iwata"
-								class="d-block" width="1200px" height="555px" />
+							<img src="/assets/images/slider/ryoji-iwata-zebra.webp" alt="ryoji-iwata"
+								class="d-block" width="1200px" height="555px" loading="eager"/>
 						</picture>
 					</div>
 					<div class="carousel-item">
 						<picture>
-							<source srcset="/.netlify/images?url=/assets/images/slider/nicholas-green-supporter-MS.webp"
+							<source srcset="/assets/images/slider/nicholas-green-supporter-MS.webp"
 								width="800px" height="370px" media="(max-width:767px)" />
-							<img src="/.netlify/images?url=/assets/images/slider/nicholas-green-supporter.webp"
-								alt="nicholas-green" class="d-block" width="1200px" height="555px">
+							<img src="/assets/images/slider/nicholas-green-supporter.webp"
+								alt="nicholas-green" class="d-block" width="1200px" height="555px" loading="lazy">
 						</picture>
 					</div>
 					<div class="carousel-item">
 						<picture>
-							<source srcset="/.netlify/images?url=/assets/images/slider/edward-cisneros-dance-MS.webp" width="800px"
+							<source srcset="/assets/images/slider/edward-cisneros-dance-MS.webp" width="800px"
 								heigth="370px" media="(max-width:767px)" />
-							<img src="/.netlify/images?url=/assets/images/slider/edward-cisneros-dance.webp"
-								alt="edward-cisneros" class="d-block" width="1200px" height="554px">
+							<img src="/assets/images/slider/edward-cisneros-dance.webp"
+								alt="edward-cisneros" class="d-block" width="1200px" height="554px" loading="lazy">
 						</picture>
 
 					</div>
@@ -88,7 +88,7 @@
 		</section>
 		<section id="about">
 			<div class="picture left">
-				<img src="/.netlify/images?url=/assets/images/nina.webp" alt="Nina's self-portrait" width="470px" height="468px">
+				<img src="/assets/images/nina.webp" alt="Nina's self-portrait" width="470px" height="468px">
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
@@ -109,31 +109,31 @@
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
 					<img data-gallery-tag="Concert" class="gallery-item" width="470px" height="626px"
-						src="/.netlify/images?url=/assets/images/gallery/concerts/Aaron-paul-concert.webp"
+						src="/assets/images/gallery/concerts/Aaron-paul-concert.webp"
 						alt="Photo taken during a concert" loading="lazy" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" width="470px" height="705px"
-						src="/.netlify/images?url=/assets/images/gallery/entreprise/ali-morshedlou-leader.webp"
+						src="/assets/images/gallery/entreprise/ali-morshedlou-leader.webp"
 						alt="Portrait of a business leader" loading="lazy" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" width="470px" height="318px"
-						src="/.netlify/images?url=/assets/images/gallery/entreprise/jason-goodman-smile.webp"
+						src="/assets/images/gallery/entreprise/jason-goodman-smile.webp"
 						alt="Portrait of an office worker" loading="lazy" />
 					<img data-gallery-tag="Mariages" class="gallery-item" width="470px" height="375px"
-						src="/.netlify/images?url=/assets/images/gallery/mariage/hannah-busing-hands.webp"
+						src="/assets/images/gallery/mariage/hannah-busing-hands.webp"
 						alt="Photo of hands meeting" loading="lazy" />
 					<img data-gallery-tag="Portrait" class="gallery-item" width="470px" height="704px"
-						src="/.netlify/images?url=/assets/images/gallery/portraits/ade-tunji-upset.webp"
+						src="/assets/images/gallery/portraits/ade-tunji-upset.webp"
 						alt="portrait of an upset man" loading="lazy" />
 					<img data-gallery-tag="Mariages" class="gallery-item" width="470px" height="705px"
-						src="/.netlify/images?url=/assets/images/gallery/mariage/jakob-owens-bride.webp"
+						src="/assets/images/gallery/mariage/jakob-owens-bride.webp"
 						alt="photo of the bride and groom in the park" loading="lazy" />
 					<img data-gallery-tag="Portrait" class="gallery-item" width="470px" height="706px"
-						src="/.netlify/images?url=/assets/images/gallery/portraits/nino-van-prattenburg-young.webp"
+						src="/assets/images/gallery/portraits/nino-van-prattenburg-young.webp"
 						alt="Low angle portrait of a young woman" loading="lazy" />
 					<img data-gallery-tag="Concert" class="gallery-item" width="470px" height="313px"
-						src="/.netlify/images?url=/assets/images/gallery/concerts/austin-neill-singer.webp"
+						src="/assets/images/gallery/concerts/austin-neill-singer.webp"
 						alt="Photo of a singer during a concert" loading="lazy" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" width="470px" height="287px"
-						src="/.netlify/images?url=/assets/images/gallery/entreprise/mateus-campos-laught.webp"
+						src="/assets/images/gallery/entreprise/mateus-campos-laught.webp"
 						alt="we have the right to laugh at work!" loading="lazy" />
 				</div>
 			</div>
@@ -209,7 +209,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="/.netlify/images?url=/assets/images/camera.webp" alt="vintage camera" loading="lazy">
+					<img src="/assets/images/camera.webp" alt="vintage camera" loading="lazy">
 				</div>
 			</div>
 		</section>
