adaptation précise du slider

--- a/index.html
+++ b/index.html
@@ -50,25 +50,43 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<picture>
-							<source srcset="/.netlify/images?url=/assets/images/slider/ryoji-iwata-zebra-MS.webp" width="800px"
-								height="370px" media="(max-width:767px)" />
-							<img src="/.netlify/images?url=/assets/images/slider/ryoji-iwata-zebra.webp" alt="ryoji-iwata"
-								class="d-block" width="1200px" height="555px" loading="eager"/>
+							<source srcset="/.netlify/images?url=/assets/images/slider/XS/ryoji-iwata-zebra.webp"
+								width="576px" height="266px" media="(max-width: 575px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/S/ryoji-iwata-zebra.webp"
+								width="768px" height="354px" media="(min-width: 576px) and (max-width: 767px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/M/ryoji-iwata-zebra.webp"
+								width="992px" height="458px" media="(min-width: 768px) and (max-width: 991px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/XL/ryoji-iwata-zebra.webp"
+								width="1400px" height="647px" media="(min-width: 1200px)" />
+							<img src="/.netlify/images?url=/assets/images/slider/L/ryoji-iwata-zebra.webp"
+								alt="ryoji-iwata" class="d-block" width="1200" height="555" loading="eager" />
 						</picture>
 					</div>
 					<div class="carousel-item">
 						<picture>
-							<source srcset="/.netlify/images?url=/assets/images/slider/nicholas-green-supporter-MS.webp"
-								width="800px" height="370px" media="(max-width:767px)" />
-							<img src="/.netlify/images?url=/assets/images/slider/nicholas-green-supporter.webp"
+							<source srcset="/.netlify/images?url=/assets/images/slider/XS/nicholas-green-supporter.webp" width="576px" height="266px"
+								media="(max-width: 575px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/S/nicholas-green-supporter.webp" width="768px" height="354px"
+								media="(min-width: 576px) and (max-width: 767px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/M/nicholas-green-supporter.webp" width="992px" height="458px"
+								media="(min-width: 768px) and (max-width: 991px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/XL/nicholas-green-supporter.webp" width="1400px" height="647px"
+								media="(min-width: 1200px)" />
+							<img src="/.netlify/images?url=/assets/images/slider/L/nicholas-green-supporter.webp"
 								alt="nicholas-green" class="d-block" width="1200px" height="555px" loading="lazy">
 						</picture>
 					</div>
 					<div class="carousel-item">
 						<picture>
-							<source srcset="/.netlify/images?url=/assets/images/slider/edward-cisneros-dance-MS.webp" width="800px"
-								heigth="370px" media="(max-width:767px)" />
-							<img src="/.netlify/images?url=/assets/images/slider/edward-cisneros-dance.webp"
+							<source srcset="/.netlify/images?url=/assets/images/slider/XS/edward-cisneros-dance.webp" width="576px"
+								height="266px" media="(max-width: 575px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/S/edward-cisneros-dance.webp" width="768px" height="354px"
+								media="(min-width: 576px) and (max-width: 767px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/M/edward-cisneros-dance.webp" width="992px" height="458px"
+								media="(min-width: 768px) and (max-width: 991px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/XL/edward-cisneros-dance.webp" width="1400px"
+								height="647px" media="(min-width: 1200px)" />
+							<img src="/.netlify/images?url=/assets/images/slider/L/edward-cisneros-dance.webp"
 								alt="edward-cisneros" class="d-block" width="1200px" height="554px" loading="lazy">
 						</picture>
 
@@ -88,7 +106,8 @@
 		</section>
 		<section id="about">
 			<div class="picture left">
-				<img src="/.netlify/images?url=/assets/images/nina.webp" alt="Nina's self-portrait" width="470px" height="468px">
+				<img src="/.netlify/images?url=/assets/images/nina.webp" alt="Nina's self-portrait" width="470px"
+					height="468px">
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
