minify CSS et Rich Snipets

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="fr">
 
 <head>
-	<title>Nina Carducci, photographe</title>
+	<title>Nina Carducci, photographe, Bordeaux et Ile-de-France</title>
 	<meta name="description"
-		content="Portfolio de la photographe Nina Carducci : portraits, mariage, reportage d'entreprise, évènementiel, retouche, albums... J'immortalise vos instants de vie pour en créer de précieux souvenirs. Bordeaux et Ile-de-France">
+		content="Portraits, mariage, reportage d'entreprise, évènementiel, retouche, albums... J'immortalise vos instants de vie pour en créer de précieux souvenirs.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="robots" content="index,follow">
+	<link rel="Canonical" href="https://p9ninacarduccibysopmi82.netlify.app/">
 	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style"
 		onload="this.onload=null;this.rel='stylesheet'">
 	<noscript>
@@ -20,6 +22,45 @@
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,800&display=swap"
 		media="print" onload="this.media='all'">
 	<meta charset="UTF-8">
+
+	<!-- Balisage JSON-LD généré par l'outil d'aide au balisage de données structurées de Google -->
+	<script type="application/ld+json">
+	{
+	  "@context": "http://schema.org",
+	  "@type": "LocalBusiness",
+	  "name": "Nina Carducci, photographe",
+	  "image": "https://p9ninacarduccibysopmi82.netlify.app/.netlify/images?url=/assets/images/nina.webp",
+	  "url": "https://p9ninacarduccibysopmi82.netlify.app/"
+	  "telephone": "+33556677889",
+	  "priceRange": "50€ - 400€",
+	  "address": {
+	    "@type": "PostalAddress",
+	    "streetAddress": "68 avenue Alsace-Lorraine",
+	    "addressLocality": "Bordeaux",
+	    "addressRegion": "Aquitaine",
+	    "addressCountry": "FR",
+	    "postalCode": "33200"
+	  },
+	  "openingHoursSpecification": {
+	    "@type": "OpeningHoursSpecification",
+	    "dayOfWeek":  [
+			"Monday",
+			"Tuesday",
+			"Wednesday",
+			"Thursday",
+			"Friday"
+			],
+	    "opens": "10:00",
+	    "closes": "19:00"
+	  },
+	    "sameAs": [
+    "https://www.facebook.com/ninacarducci.photo",
+    "https://x.com/ninacarducci.photo",
+    "https://www.instagram.com/ninacarducci.photo"
+  ] 
+	}
+	</script>
+
 </head>
 
 <body>
@@ -64,28 +105,28 @@
 					</div>
 					<div class="carousel-item">
 						<picture>
-							<source srcset="/.netlify/images?url=/assets/images/slider/XS/nicholas-green-supporter.webp" width="576px" height="266px"
-								media="(max-width: 575px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/S/nicholas-green-supporter.webp" width="768px" height="354px"
-								media="(min-width: 576px) and (max-width: 767px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/M/nicholas-green-supporter.webp" width="992px" height="458px"
-								media="(min-width: 768px) and (max-width: 991px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/XL/nicholas-green-supporter.webp" width="1400px" height="647px"
-								media="(min-width: 1200px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/XS/nicholas-green-supporter.webp"
+								width="576px" height="266px" media="(max-width: 575px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/S/nicholas-green-supporter.webp"
+								width="768px" height="354px" media="(min-width: 576px) and (max-width: 767px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/M/nicholas-green-supporter.webp"
+								width="992px" height="458px" media="(min-width: 768px) and (max-width: 991px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/XL/nicholas-green-supporter.webp"
+								width="1400px" height="647px" media="(min-width: 1200px)" />
 							<img src="/.netlify/images?url=/assets/images/slider/L/nicholas-green-supporter.webp"
 								alt="nicholas-green" class="d-block" width="1200px" height="555px" loading="lazy">
 						</picture>
 					</div>
 					<div class="carousel-item">
 						<picture>
-							<source srcset="/.netlify/images?url=/assets/images/slider/XS/edward-cisneros-dance.webp" width="576px"
-								height="266px" media="(max-width: 575px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/S/edward-cisneros-dance.webp" width="768px" height="354px"
-								media="(min-width: 576px) and (max-width: 767px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/M/edward-cisneros-dance.webp" width="992px" height="458px"
-								media="(min-width: 768px) and (max-width: 991px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/XL/edward-cisneros-dance.webp" width="1400px"
-								height="647px" media="(min-width: 1200px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/XS/edward-cisneros-dance.webp"
+								width="576px" height="266px" media="(max-width: 575px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/S/edward-cisneros-dance.webp"
+								width="768px" height="354px" media="(min-width: 576px) and (max-width: 767px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/M/edward-cisneros-dance.webp"
+								width="992px" height="458px" media="(min-width: 768px) and (max-width: 991px)" />
+							<source srcset="/.netlify/images?url=/assets/images/slider/XL/edward-cisneros-dance.webp"
+								width="1400px" height="647px" media="(min-width: 1200px)" />
 							<img src="/.netlify/images?url=/assets/images/slider/L/edward-cisneros-dance.webp"
 								alt="edward-cisneros" class="d-block" width="1200px" height="554px" loading="lazy">
 						</picture>
