Ajustements et corrections referencement

--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
+t
 <!DOCTYPE html>
 <html lang="fr">
 
 <head>
+	<!--METAS-->
 	<title>Nina Carducci, photographe, Bordeaux et Ile-de-France</title>
 	<meta name="description"
 		content="Portraits, mariage, reportage d'entreprise, évènementiel, retouche, albums... J'immortalise vos instants de vie pour en créer de précieux souvenirs.">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="robots" content="index,follow">
 	<link rel="Canonical" href="https://p9ninacarduccibysopmi82.netlify.app/">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<!--METAS FACEBOOK-->
+	<meta property="og:title" content="Nina Carducci, photographe, Bordeaux et Ile-de-France" />
+	<meta property="og:type" content="website" />
+	<meta property="og:image"
+		content="https://p9ninacarduccibysopmi82.netlify.app/.netlify/images?url=/assets/images/nina.webp" />
+	<meta property="og:url" content="https://p9ninacarduccibysopmi82.netlify.app" />
+	<meta property="og:description"
+		content="Portraits, mariage, reportage d'entreprise, évènementiel, retouche, albums... J'immortalise vos instants de vie pour en créer de précieux souvenirs." />
+	<!--METAS TWITTER-->
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="@NinaCarducciPhoto" />
+	<meta name="twitter:title" content="Nina Carducci, photographe, Bordeaux et Ile-de-France" />
+	<meta name="twitter:description"
+		content="Portraits, mariage, reportage d'entreprise, évènementiel, retouche, albums... J'immortalise vos instants de vie pour en créer de précieux souvenirs." />
+	<meta name="twitter:image"
+		content="https://p9ninacarduccibysopmi82.netlify.app/.netlify/images?url=/assets/images/nina.webp" />
+	<meta name="twitter:url" content="https://p9ninacarduccibysopmi82.netlify.app" />
+	<!-- LINKS -->
 	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style"
 		onload="this.onload=null;this.rel='stylesheet'">
 	<noscript>
@@ -30,7 +51,7 @@
 	  "@type": "LocalBusiness",
 	  "name": "Nina Carducci, photographe",
 	  "image": "https://p9ninacarduccibysopmi82.netlify.app/.netlify/images?url=/assets/images/nina.webp",
-	  "url": "https://p9ninacarduccibysopmi82.netlify.app/"
+	  "url": "https://p9ninacarduccibysopmi82.netlify.app/",
 	  "telephone": "+33556677889",
 	  "priceRange": "50€ - 400€",
 	  "address": {
@@ -43,21 +64,19 @@
 	  },
 	  "openingHoursSpecification": {
 	    "@type": "OpeningHoursSpecification",
-	    "dayOfWeek":  [
+	    "dayOfWeek":  {
 			"Monday",
 			"Tuesday",
 			"Wednesday",
 			"Thursday",
 			"Friday"
-			],
+			},
 	    "opens": "10:00",
 	    "closes": "19:00"
 	  },
-	    "sameAs": [
-    "https://www.facebook.com/ninacarducci.photo",
-    "https://x.com/ninacarducci.photo",
+	    "sameAs": {
     "https://www.instagram.com/ninacarducci.photo"
-  ] 
+  } 
 	}
 	</script>
 
