correction titres manquants sur les images

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ t
 							<source srcset="/.netlify/images?url=/assets/images/slider/XL/ryoji-iwata-zebra.webp"
 								width="1400px" height="647px" media="(min-width: 1200px)" />
 							<img src="/.netlify/images?url=/assets/images/slider/L/ryoji-iwata-zebra.webp"
-								alt="ryoji-iwata" class="d-block" width="1200" height="555" loading="eager" />
+								alt="Un homme d'affaires traverse un passage piéton" title="Zebra" class="d-block" width="1200" height="555" loading="eager" />
 						</picture>
 					</div>
 					<div class="carousel-item">
@@ -133,7 +133,7 @@ t
 							<source srcset="/.netlify/images?url=/assets/images/slider/XL/nicholas-green-supporter.webp"
 								width="1400px" height="647px" media="(min-width: 1200px)" />
 							<img src="/.netlify/images?url=/assets/images/slider/L/nicholas-green-supporter.webp"
-								alt="nicholas-green" class="d-block" width="1200px" height="555px" loading="lazy">
+								alt="Le public s'agite dans les tribunes" title="Delirious crowd" class="d-block" width="1200px" height="555px" loading="lazy">
 						</picture>
 					</div>
 					<div class="carousel-item">
@@ -147,7 +147,7 @@ t
 							<source srcset="/.netlify/images?url=/assets/images/slider/XL/edward-cisneros-dance.webp"
 								width="1400px" height="647px" media="(min-width: 1200px)" />
 							<img src="/.netlify/images?url=/assets/images/slider/L/edward-cisneros-dance.webp"
-								alt="edward-cisneros" class="d-block" width="1200px" height="554px" loading="lazy">
+								alt="Un couple danse un tango devant sa famille pendant son mariage" title="Tango" class="d-block" width="1200px" height="554px" loading="lazy">
 						</picture>
 
 					</div>
@@ -166,7 +166,7 @@ t
 		</section>
 		<section id="about">
 			<div class="picture left">
-				<img src="/.netlify/images?url=/assets/images/nina.webp" alt="Nina's self-portrait" width="470px"
+				<img src="/.netlify/images?url=/assets/images/nina.webp" alt="Autoportrait de Nina Carducci" title="Nina" width="470px"
 					height="468px">
 			</div>
 			<div id="about-me">
@@ -189,31 +189,31 @@ t
 				<div class="gallery" style="display: none">
 					<img data-gallery-tag="Concert" class="gallery-item" width="470px" height="626px"
 						src="/.netlify/images?url=/assets/images/gallery/concerts/Aaron-paul-concert.webp"
-						alt="Photo taken during a concert" loading="lazy" />
+						alt="Photo de la scène et des éclairages pendant un concert" title="Concert" loading="lazy" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" width="470px" height="705px"
 						src="/.netlify/images?url=/assets/images/gallery/entreprise/ali-morshedlou-leader.webp"
-						alt="Portrait of a business leader" loading="lazy" />
+						alt="Portait d'un chef d'entreprise" title="Businessman" loading="lazy" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" width="470px" height="318px"
 						src="/.netlify/images?url=/assets/images/gallery/entreprise/jason-goodman-smile.webp"
-						alt="Portrait of an office worker" loading="lazy" />
+						alt="Une employée de bureau à son poste" title="Happiness at work" loading="lazy" />
 					<img data-gallery-tag="Mariages" class="gallery-item" width="470px" height="375px"
 						src="/.netlify/images?url=/assets/images/gallery/mariage/hannah-busing-hands.webp"
-						alt="Photo of hands meeting" loading="lazy" />
+						alt="des mains jointes pour un mariage" title="Just married" loading="lazy" />
 					<img data-gallery-tag="Portrait" class="gallery-item" width="470px" height="704px"
 						src="/.netlify/images?url=/assets/images/gallery/portraits/ade-tunji-upset.webp"
-						alt="portrait of an upset man" loading="lazy" />
+						alt="un homme qui semble contrarié" title="upset" loading="lazy" />
 					<img data-gallery-tag="Mariages" class="gallery-item" width="470px" height="705px"
 						src="/.netlify/images?url=/assets/images/gallery/mariage/jakob-owens-bride.webp"
-						alt="photo of the bride and groom in the park" loading="lazy" />
+						alt="photo de jeunes mariés dans un jardin botanique" title="Newlyweds" loading="lazy" />
 					<img data-gallery-tag="Portrait" class="gallery-item" width="470px" height="706px"
 						src="/.netlify/images?url=/assets/images/gallery/portraits/nino-van-prattenburg-young.webp"
-						alt="Low angle portrait of a young woman" loading="lazy" />
+						alt="portrait en contreplongé d'une jeune femme" title="Young woman" loading="lazy" />
 					<img data-gallery-tag="Concert" class="gallery-item" width="470px" height="313px"
 						src="/.netlify/images?url=/assets/images/gallery/concerts/austin-neill-singer.webp"
-						alt="Photo of a singer during a concert" loading="lazy" />
+						alt="Photo d'un chanteur pendant son concert" title="Singer" loading="lazy" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" width="470px" height="287px"
 						src="/.netlify/images?url=/assets/images/gallery/entreprise/mateus-campos-laught.webp"
-						alt="we have the right to laugh at work!" loading="lazy" />
+						alt="Une employée de bureau rit avec ses collègues" title="we have the right to laugh at work!" loading="lazy" />
 				</div>
 			</div>
 			<figure class="quote">
@@ -288,7 +288,7 @@ t
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="/.netlify/images?url=/assets/images/camera.webp" alt="vintage camera" loading="lazy">
+					<img src="/.netlify/images?url=/assets/images/camera.webp" alt="Photo d'un appareil photo vintage" title="vintage cam" loading="lazy">
 				</div>
 			</div>
 		</section>
