--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ t
 	<meta name="description"
 		content="Portraits, mariage, reportage d'entreprise, évènementiel, retouche, albums... J'immortalise vos instants de vie pour en créer de précieux souvenirs.">
 	<meta name="robots" content="index,follow">
-	<link rel="Canonical" href="https://p9ninacarduccibysopmi82.netlify.app/">
+	<link rel="Canonical" href="https://p9ninacarduccibysopmi82.netlify.app">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<!--METAS FACEBOOK-->
