--- a/index.html
+++ b/index.html
@@ -64,19 +64,17 @@ t
 	  },
 	  "openingHoursSpecification": {
 	    "@type": "OpeningHoursSpecification",
-	    "dayOfWeek":  {
+	    "dayOfWeek":  [
 			"Monday",
 			"Tuesday",
 			"Wednesday",
 			"Thursday",
 			"Friday"
-			},
+			],
 	    "opens": "10:00",
 	    "closes": "19:00"
 	  },
-	    "sameAs": {
-    "https://www.instagram.com/ninacarducci.photo"
-  } 
+	    "sameAs": "https://www.instagram.com/ninacarducci.photo" 
 	}
 	</script>
 
