--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		content="https://p9ninacarduccibysopmi82.netlify.app/.netlify/images?url=/assets/images/nina.webp" />
 	<meta name="twitter:url" content="https://p9ninacarduccibysopmi82.netlify.app" />
 	<!-- LINKS -->
-		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -100,52 +100,45 @@
 						aria-label="Slide 3"></button>
 				</div>
 				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<picture>
-							<source srcset="/.netlify/images?url=/assets/images/slider/XS/ryoji-iwata-zebra.webp"
-								width="576px" height="266px" media="(max-width: 575px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/S/ryoji-iwata-zebra.webp"
-								width="768px" height="354px" media="(min-width: 576px) and (max-width: 767px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/M/ryoji-iwata-zebra.webp"
-								width="992px" height="458px" media="(min-width: 768px) and (max-width: 991px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/XL/ryoji-iwata-zebra.webp"
-								width="1400px" height="647px" media="(min-width: 1200px)" />
-							<img src="/.netlify/images?url=/assets/images/slider/L/ryoji-iwata-zebra.webp"
-								alt="Un homme d'affaires traverse un passage piéton" title="Zebra" class="d-block"
-								width="1200" height="555" loading="eager" />
-						</picture>
-					</div>
-					<div class="carousel-item">
-						<picture>
-							<source srcset="/.netlify/images?url=/assets/images/slider/XS/nicholas-green-supporter.webp"
-								width="576px" height="266px" media="(max-width: 575px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/S/nicholas-green-supporter.webp"
-								width="768px" height="354px" media="(min-width: 576px) and (max-width: 767px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/M/nicholas-green-supporter.webp"
-								width="992px" height="458px" media="(min-width: 768px) and (max-width: 991px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/XL/nicholas-green-supporter.webp"
-								width="1400px" height="647px" media="(min-width: 1200px)" />
-							<img src="/.netlify/images?url=/assets/images/slider/L/nicholas-green-supporter.webp"
-								alt="Le public s'agite dans les tribunes" title="Delirious crowd" class="d-block"
-								width="1200px" height="555px" loading="lazy">
-						</picture>
-					</div>
-					<div class="carousel-item">
-						<picture>
-							<source srcset="/.netlify/images?url=/assets/images/slider/XS/edward-cisneros-dance.webp"
-								width="576px" height="266px" media="(max-width: 575px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/S/edward-cisneros-dance.webp"
-								width="768px" height="354px" media="(min-width: 576px) and (max-width: 767px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/M/edward-cisneros-dance.webp"
-								width="992px" height="458px" media="(min-width: 768px) and (max-width: 991px)" />
-							<source srcset="/.netlify/images?url=/assets/images/slider/XL/edward-cisneros-dance.webp"
-								width="1400px" height="647px" media="(min-width: 1200px)" />
-							<img src="/.netlify/images?url=/assets/images/slider/L/edward-cisneros-dance.webp"
-								alt="Un couple danse un tango devant sa famille pendant son mariage" title="Tango"
-								class="d-block" width="1200px" height="554px" loading="lazy">
-						</picture>
-
-					</div>
+					<picture class="carousel-item active">
+						<source srcset="/.netlify/images?url=/assets/images/slider/XS/ryoji-iwata-zebra.webp"
+							width="576px" height="266px" media="(max-width: 575px)" />
+						<source srcset="/.netlify/images?url=/assets/images/slider/S/ryoji-iwata-zebra.webp"
+							width="768px" height="354px" media="(min-width: 576px) and (max-width: 767px)" />
+						<source srcset="/.netlify/images?url=/assets/images/slider/M/ryoji-iwata-zebra.webp"
+							width="992px" height="458px" media="(min-width: 768px) and (max-width: 991px)" />
+						<source srcset="/.netlify/images?url=/assets/images/slider/XL/ryoji-iwata-zebra.webp"
+							width="1400px" height="647px" media="(min-width: 1200px)" />
+						<img src="/.netlify/images?url=/assets/images/slider/L/ryoji-iwata-zebra.webp"
+							alt="Un homme d'affaires traverse un passage piéton" title="Zebra" class="d-block"
+							width="1200" height="555" loading="eager" />
+					</picture>
+					<picture class="carousel-item">
+						<source srcset="/.netlify/images?url=/assets/images/slider/XS/nicholas-green-supporter.webp"
+							width="576px" height="266px" media="(max-width: 575px)" />
+						<source srcset="/.netlify/images?url=/assets/images/slider/S/nicholas-green-supporter.webp"
+							width="768px" height="354px" media="(min-width: 576px) and (max-width: 767px)" />
+						<source srcset="/.netlify/images?url=/assets/images/slider/M/nicholas-green-supporter.webp"
+							width="992px" height="458px" media="(min-width: 768px) and (max-width: 991px)" />
+						<source srcset="/.netlify/images?url=/assets/images/slider/XL/nicholas-green-supporter.webp"
+							width="1400px" height="647px" media="(min-width: 1200px)" />
+						<img src="/.netlify/images?url=/assets/images/slider/L/nicholas-green-supporter.webp"
+							alt="Le public s'agite dans les tribunes" title="Delirious crowd" class="d-block"
+							width="1200px" height="555px" loading="lazy">
+					</picture>
+					<picture class="carousel-item">
+						<source srcset="/.netlify/images?url=/assets/images/slider/XS/edward-cisneros-dance.webp"
+							width="576px" height="266px" media="(max-width: 575px)" />
+						<source srcset="/.netlify/images?url=/assets/images/slider/S/edward-cisneros-dance.webp"
+							width="768px" height="354px" media="(min-width: 576px) and (max-width: 767px)" />
+						<source srcset="/.netlify/images?url=/assets/images/slider/M/edward-cisneros-dance.webp"
+							width="992px" height="458px" media="(min-width: 768px) and (max-width: 991px)" />
+						<source srcset="/.netlify/images?url=/assets/images/slider/XL/edward-cisneros-dance.webp"
+							width="1400px" height="647px" media="(min-width: 1200px)" />
+						<img src="/.netlify/images?url=/assets/images/slider/L/edward-cisneros-dance.webp"
+							alt="Un couple danse un tango devant sa famille pendant son mariage" title="Tango"
+							class="d-block" width="1200px" height="555px" loading="lazy">
+					</picture>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
 					data-bs-slide="prev">
