--- a/index.html
+++ b/index.html
@@ -283,6 +283,15 @@
 			</div>
 		</section>
 	</main>
+	<footer>
+		<h3>Nina Carducci, photographe</h3>
+		<address>
+			Avenue Alsace-Lorraine<br/>
+			33200 Bordeaux <br/>
+			05 56 67 78 89 <br/>
+			Du lundi au vendredi de 10h à 19h
+		</address>
+	</footer>
 	<script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
