--- a/index.html
+++ b/index.html
@@ -284,13 +284,14 @@
 		</section>
 	</main>
 	<footer>
-		<h3>Nina Carducci, photographe</h3>
+		<h2>Nina Carducci</h2>
 		<address>
 			Avenue Alsace-Lorraine<br/>
 			33200 Bordeaux <br/>
 			05 56 67 78 89 <br/>
 			Du lundi au vendredi de 10h à 19h
 		</address>
+		<span>© 2024 Nina Carducci</span>
 	</footer>
 	<script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -298,5 +299,4 @@
 	<script defer src="./assets/maugallery.js"></script>
 	<script defer src="./assets/scripts.js"></script>
 </body>
-
 </html>
